# ZUMBLE

./: Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: docker-publish.yml  release.yml
src/: channel.rs  clean.rs  client.rs  error.rs  main.rs  metrics.rs  state.rs  target.rs  voice.rs
src/handler/: authenticate.rs  channel_state.rs  crypt_setup.rs  mod.rs  permission_query.rs  ping.rs  user_state.rs  version.rs  voice_packet.rs  voice_target.rs
src/http/: deaf.rs  mod.rs  mute.rs  status.rs
src/message/: mod.rs
src/proto/: mumble.rs
src/server/: constants.rs  mod.rs  tcp.rs  udp.rs
src/sync/: mod.rs
