[package]
name = "zumble"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-server = "2.5.0"
actix-service = "2.0.2"
actix-tls = { version= "3.4.0", features = ["rustls"] }
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-web-codegen = "4.3.0"
actix-web-httpauth = "0.8.2"
aes = "0.8.4"
anyhow = "1.0.93"
async-trait = "0.1.83"
block-modes = "0.9.1"
bytes = "1.9.0"
byteorder = "1.5.0"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
protobuf = "2.28.0"
ring = "0.17.8"
rustls = { version = "0.23.19", features = ["tls12", "aws_lc_rs"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tokio-byteorder = "0.3.0"
tokio-rustls = "0.26.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
prometheus = { version  = "0.13.4", features = ["process"] }
rustls-pki-types = "1.10.0"
rcgen = { version = "0.13.1", features = ["aws_lc_rs"] }
dashmap = "6.1.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
